# Remarkable_Daily_Planner

./: .gitignore  LICENSE  README.md  config.yaml  main.py  main_generate_examen_sampler.py  my_quotes.csv  pyproject.toml  requirements.txt  structure.txt
planner/: __init__.py  cli.py  config.py  data.py  logging_setup.py  quotes.py  styles.py  templates.py  utils.py
planner/generate/: daily.py  examen.py  month_loop.py
planner/rendering/: links.py  pdf_factory.py
tests/: test_templates.py
